presize 0.0.1.9003
-----------------------------------------

* `prec_sens` and `prec_spec` allow prev and conf.width

* multiple notes and allowed in print method

* add contributing guidelines


presize 0.0.1.9002
-----------------------------------------

* addition of various tests

* addition of rate ratio method