@@ -16,7 +16,6 @@ export(prec_rateratio)
 export(prec_riskdiff)
 export(prec_riskratio)
 export(prec_sens)
-export(prec_sens_spec)
 export(prec_spec)
 importFrom(stats,qchisq)
 importFrom(stats,qnorm)
