@@ -7,6 +7,8 @@ presize 0.0.1.9003
 
 * add contributing guidelines
 
+* `prec_sens_spec` removed. Confidence intervals and sample sizes are quite different to other methods. A two step approach using `prec_sens` and `prec_spec` is instead recommended
+
 
 presize 0.0.1.9002
 -----------------------------------------
